# TKM_Demos

./: LICENSE  README.md
TKM-Groq-Interfase/: app.py  chainlit.md  pyproject.toml  requirements.txt  starters.py
TKM-Groq-Interfase/public/: style.css
TKM_FileAnalysis/: app.py  chainlit.md  chat.py  original.py  pyproject.toml  replit.nix  requirements.txt  working_code.py
